Se crea consulta de listar usuarios.
