# app/Http/Controllers/UsuariosController.php
@@ -144,7 +144,7 @@ class UsuariosController extends Controller
 
     /**
     * @OA\Post(
-    *      path="/api/crear",
+    *      path="/api/usuarios/crear",
     *      operationId="create",
     *      tags={"Projects"},
     *      summary="Get list of projects",
@@ -297,14 +297,46 @@ class UsuariosController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  \App\usuarios  $usuarios
-     * @return \Illuminate\Http\Response
-     */
+    * @OA\Get(
+    *      path="/api/usuarios/listar",
+    *      operationId="show",
+    *      tags={"Projects"},
+    *      summary="Get list of projects",
+    *      description="Listar usuarios.",
+    *      @OA\Parameter(
+    *         name="authorization",
+    *         in="header",
+    *         description="Header de autorización.",
+    *         required=false,
+    *         @OA\Schema(
+    *             type="string"
+    *         )
+    *      ),
+    *      @OA\Response(
+    *          response=200,
+    *          description="Operación correcta."
+    *       ),
+    *       @OA\Response(response=400, description="Bad request"),
+    *       security={
+    *           {"api_key_security_example": {}}
+    *       }
+    *     )
+    */
     public function show(usuarios $usuarios)
     {
-        //
+        $usuarios = usuarios::where('estado', 1)->orWhere('estado', 0)->get();
+        if (empty($usuarios)) {
+            $resp = array(
+                "success" => false,
+                "mensaje" => "No hay usuarios"
+            );
+        } else {
+            $resp = array(
+                "success" => true,
+                "mensaje" => $usuarios
+            );
+        }
+        return $resp;
     }
 
     /**
